--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "canvas": "^1.6.11",
     "dayjs": "^1.7.2",
-    "puppeteer": "^1.5.0"
+    "gm": "^1.23.1",
+    "lwip": "^0.0.9",
+    "puppeteer": "^1.5.0",
+    "request": "^2.87.0"
   }
 }
